added ghostium git submodules again

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "blog/ghost"]
 	path = blog/ghost
 	url = https://github.com/bsampath/Ghost
+[submodule "blog/ghostium"]
+	path = blog/ghostium
+	url = https://github.com/bsampath/ghostium
